Fixed alignment of Addinstruction button.  Added code to save current list of instructions when new list item is added

--- a/Eyon.Site/wwwroot/css/site.css
+++ b/Eyon.Site/wwwroot/css/site.css
@@ -179,8 +179,9 @@ ol.instructions {
     clear: both;
     list-style: none;
     padding-left: 2%;
+    margin-top: ;
 }
-.instruction_item {
+li.instruction_item {
     padding-left: 1em;
     display: block;
     position: relative;
@@ -188,30 +189,46 @@ ol.instructions {
     margin-top: .5em;
 }
 
-    .instruction_item::before {
-        margin-top: .75em;
-        content: counter(inst);
-        background: rgba(2, 184, 117, 0.35);
-        /*box-shadow: 0px 2px 2px rgba(2, 184, 117, 0.3);*/
-        box-shadow: 0px 2px 2px rgba(100, 184, 117, 0.9);
-        color: #fff;
-        font-size: 1em;
-        font-weight: 700;
-        font-style: italic;
-        text-shadow: 1px 1px rgba(2, 184, 117, 0.5);
-        border-radius: 0 0.675em 0.675em 0;
-        font-size: 1.5em;
-        text-align: center;
-        padding-top: 0;
-        padding-left: 2.25%;
-        left: -5%;
-        top: -0.65em;
-        height: 1.35em;
-        width: 1.35em;
-        position: absolute;
-        transition: all 0.2s ease-in-out;
-    }
+.instruction_item::before {
+    margin-top: .75em;
+    content: counter(inst);
+    background: rgba(2, 184, 117, 0.9);    
+    box-shadow: 0px 2px 2px rgba(100, 184, 117, 0.9);
+    color: #fff;
+    font-size: 1em;
+    font-weight: 700;
+    font-style: italic;
+    text-shadow: 1px 1px rgba(2, 184, 117, 0.7);    
+    border-radius: 0.675em 0 0 0.675em;
+    font-size: 1.5em;
+    text-align: center;
+    padding-top: 0;
+    padding-left: 2.25%;
+    left: -5%;
+    top: -0.65em;
+    height: 1.35em;
+    width: 1.35em;
+    position: absolute;
+    transition: all 0.2s ease-in-out;
+}
+
+li.nostyle {
+    list-style-type: none;
+}
 
 .instruction_textbox {
-    border-radius: 0.675em !important;
+    border-radius: 0.45em !important;
+}
+
+.btnInstruction {
+    height: 3em;
+    width: 3em;      
+    padding: 0 !important;
+}
+
+.hidden {
+    visibility: hidden;
+}
+.visible {
+    visibility: visible;
 }
